--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a id="notConnected" class="notFound">not connected</a>
                 <a id="errConnect" class="notFound">error while connecting - seek console for more information</a>
                 <a id="connectIndicator" class="clicking green">connecting...</a>
+                <a id="connected" class="green">{connected}</a>
             </div>
             <div class="roundbox">
                 <button class="glow-on-hover delayA" type="button" style="width: 150px;" onclick="promptConnect('')">connect to server</button>
