--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
         <div id="main">
             <div class="background">
-                <img src="./assets/bg.png" class="bgimg">
+                <img src="./assets/back.png" class="bgimg">
             </div>
-            <img id="img" src="./assets/camera.png">
+            <img id="img" src="./assets/camera.png">developerbuild-0</img>
             <a id="opencam">openCamera</a>
             <div class="roundbox">
                 <a id="notConnected" class="notFound">not connected</a>
